# mystical_creatures_backend

./: .gitignore  Dockerfile  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  requirements.txt
aMagicalChildhood/: asgi.py  settings.py  urls.py  wsgi.py
mystical_creatures/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
mystical_creatures/migrations/: 0001_initial.py
staticfiles/: staticfiles.json
